--- a/index.html
+++ b/index.html
@@ -20,21 +20,23 @@
   </nav>
 </header>
 
-<!-- HERO -->
+<!-- HERO CENTER -->
 <section class="hero-wrapper">
-  <div class="hero-card">
+  <div class="hero-card hero-center">
 
-    <div class="hero-left">
-      <h1 class="hero-title">Paddy</h1>
-      <p class="hero-sub">
-        Customized Phone Cases &<br>
-        Adorable Goods
-      </p>
-      <a href="products.html" class="hero-btn">Shop Now</a>
-    </div>
+    <h1 class="hero-title">Paddy</h1>
 
-    <div class="hero-right">
+    <p class="hero-sub">
+      Customized Phone Cases &<br>
+      Adorable Goods
+    </p>
+
+    <a href="products.html" class="hero-btn">Shop Now</a>
+
+    <!-- SLIDER -->
+    <div class="hero-slider">
       <div class="slider" id="heroSlider">
+
         <div class="slide active"><img src="images/hero-1.png"></div>
         <div class="slide"><img src="images/hero-2.png"></div>
         <div class="slide"><img src="images/hero-3.png"></div>
@@ -57,7 +59,7 @@
   © 2026 PaddyID. All rights reserved.
 </footer>
 
-<!-- USP BAR (PALING BAWAH, HORIZONTAL) -->
+<!-- USP BAR (PALING BAWAH) -->
 <section class="usp-bar">
   <div class="usp-row">
 
