--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
   </nav>
 </header>
 
-<!-- HERO CENTER -->
+<!-- HERO -->
 <section class="hero-wrapper">
-  <div class="hero-card hero-center">
+  <div class="hero-card hero-fix">
 
-    <h1 class="hero-title">Paddy</h1>
+    <!-- TEXT -->
+    <div class="hero-text">
+      <h1 class="hero-title">Paddy</h1>
 
-    <p class="hero-sub">
-      Customized Phone Cases &<br>
-      Adorable Goods
-    </p>
+      <p class="hero-tagline">
+        Customized Phone Cases &<br>
+        Adorable Goods
+      </p>
 
-    <a href="products.html" class="hero-btn">Shop Now</a>
+      <a href="products.html" class="hero-btn">Shop Now</a>
+    </div>
 
     <!-- SLIDER -->
     <div class="hero-slider">
@@ -59,7 +62,7 @@
   © 2026 PaddyID. All rights reserved.
 </footer>
 
-<!-- USP BAR (PALING BAWAH) -->
+<!-- USP BAR -->
 <section class="usp-bar">
   <div class="usp-row">
 
