--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   </nav>
 </header>
 
-<!-- HERO -->
+<!-- HERO (LAYOUT TETAP) -->
 <section class="hero-wrapper">
   <div class="hero-card hero-fix">
 
-    <!-- TEXT -->
+    <!-- TEXT (SUBTITLE DIPINDAH KE BAWAH PADDY) -->
     <div class="hero-text">
       <h1 class="hero-title">Paddy</h1>
 
-      <p class="hero-tagline">
+      <p class="hero-sub hero-sub-below">
         Customized Phone Cases &<br>
         Adorable Goods
       </p>
@@ -36,19 +36,18 @@
       <a href="products.html" class="hero-btn">Shop Now</a>
     </div>
 
-    <!-- SLIDER -->
+    <!-- SLIDER (TETAP) -->
     <div class="hero-slider">
       <div class="slider" id="heroSlider">
-
-        <div class="slide active"><img src="images/hero-1.png"></div>
-        <div class="slide"><img src="images/hero-2.png"></div>
-        <div class="slide"><img src="images/hero-3.png"></div>
-        <div class="slide"><img src="images/hero-4.png"></div>
-        <div class="slide"><img src="images/hero-5.png"></div>
-        <div class="slide"><img src="images/hero-6.png"></div>
-        <div class="slide"><img src="images/hero-7.png"></div>
-        <div class="slide"><img src="images/hero-8.png"></div>
-        <div class="slide"><img src="images/hero-9.png"></div>
+        <div class="slide active"><img src="images/hero-1.png" alt=""></div>
+        <div class="slide"><img src="images/hero-2.png" alt=""></div>
+        <div class="slide"><img src="images/hero-3.png" alt=""></div>
+        <div class="slide"><img src="images/hero-4.png" alt=""></div>
+        <div class="slide"><img src="images/hero-5.png" alt=""></div>
+        <div class="slide"><img src="images/hero-6.png" alt=""></div>
+        <div class="slide"><img src="images/hero-7.png" alt=""></div>
+        <div class="slide"><img src="images/hero-8.png" alt=""></div>
+        <div class="slide"><img src="images/hero-9.png" alt=""></div>
 
         <div class="dots" id="heroDots"></div>
       </div>
@@ -62,7 +61,7 @@
   © 2026 PaddyID. All rights reserved.
 </footer>
 
-<!-- USP BAR -->
+<!-- USP BAR (PALING BAWAH) -->
 <section class="usp-bar">
   <div class="usp-row">
 
