--- a/admin/survey.html
+++ b/admin/survey.html
@@ -2,106 +2,209 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard Survey</title>
+<title>Dashboard Survey | PaddyID</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-body{font-family:Arial;background:#f6f7fb;margin:0;padding:30px}
-h1{margin-bottom:10px}
-select{padding:6px}
-.cards{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin:20px 0}
-.card{background:#fff;padding:20px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,.08);text-align:center}
-table{width:100%;border-collapse:collapse;background:#fff;border-radius:12px;overflow:hidden}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center}
-th{background:#ff5ca8;color:#fff}
-canvas{background:#fff;border-radius:12px;padding:20px}
+body{
+  font-family: Arial, sans-serif;
+  background:#f6f7fb;
+  margin:0;
+  padding:30px
+}
+h1{margin-bottom:6px}
+select{padding:6px 10px}
+
+.cards{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:20px;
+  margin:20px 0
+}
+.card{
+  background:#fff;
+  padding:20px;
+  border-radius:14px;
+  box-shadow:0 2px 12px rgba(0,0,0,.08);
+  text-align:center
+}
+
+table{
+  width:100%;
+  border-collapse:collapse;
+  background:#fff;
+  border-radius:14px;
+  overflow:hidden
+}
+th,td{
+  padding:10px;
+  border-bottom:1px solid #eee;
+  text-align:center;
+  font-size:14px
+}
+th{
+  background:#ff5ca8;
+  color:#fff
+}
+
+canvas{
+  background:#fff;
+  border-radius:14px;
+  padding:20px;
+  margin-bottom:30px;
+  box-shadow:0 2px 12px rgba(0,0,0,.08)
+}
 </style>
 </head>
+
 <body>
 
 <h1>📊 Dashboard Survey Customer</h1>
+<p>Data realtime dari Google Sheet</p>
+
 Filter Bulan:
 <select id="bulan"></select>
 
 <div class="cards">
-  <div class="card"><h3>Kepuasan Produk</h3><b id="avgProduk">-</b></div>
-  <div class="card"><h3>Layanan CS</h3><b id="avgCS">-</b></div>
-  <div class="card"><h3>Layanan WA</h3><b id="avgWA">-</b></div>
+  <div class="card">
+    <p>Kepuasan Produk</p>
+    <h2 id="avgProduk">-</h2>
+  </div>
+  <div class="card">
+    <p>Layanan CS</p>
+    <h2 id="avgCS">-</h2>
+  </div>
+  <div class="card">
+    <p>Layanan WA</p>
+    <h2 id="avgWA">-</h2>
+  </div>
 </div>
 
 <canvas id="chart" height="120"></canvas>
 
-<br>
-
 <table>
 <thead>
 <tr>
-<th>Nama</th><th>HP</th><th>Alamat</th><th>Produk</th><th>CS</th><th>WA</th><th>Tanggal</th>
+  <th>Nama</th>
+  <th>HP</th>
+  <th>Alamat</th>
+  <th>Produk</th>
+  <th>CS</th>
+  <th>WA</th>
+  <th>Tanggal</th>
 </tr>
 </thead>
 <tbody id="tbody"></tbody>
 </table>
 
 <script>
+/* ===============================
+   KONFIGURASI
+================================ */
 const API_URL =
-"https://script.google.com/macros/s/AKfycbykkMnmYEaD1-sVQWpMgBRyxapVrl88ykFwqw1N_xF8_iUmMJCiNtJj7TwbxbjZBaZ4XA/exec?token=UBED_ADMIN_2026";
+"https://script.google.com/macros/s/AKfycbwO6JUOxrskZJ3o9raQOjC9i6vHmSjXa0uve22RSSkSIYt4CTIy9PNPJ2A1wVHSG_a2vw/exec";
 
 let rawData = [];
 let chart;
 
+/* ===============================
+   FETCH DATA
+================================ */
 fetch(API_URL)
-.then(r=>r.json())
-.then(d=>{
-  rawData = d;
-  initFilter();
-  render();
-});
+  .then(r => r.json())
+  .then(data => {
+    console.log("DATA DARI GAS:", data);
+    rawData = data;
+    initFilter();
+    render();
+  })
+  .catch(err => {
+    alert("Gagal load data");
+    console.error(err);
+  });
 
+/* ===============================
+   FILTER BULAN
+================================ */
 function initFilter(){
   const sel = document.getElementById("bulan");
   sel.innerHTML = `<option value="all">Semua</option>`;
-  [...new Set(rawData.map(x=>new Date(x.Tanggal).getMonth()))]
-    .forEach(m=>{
-      sel.innerHTML += `<option value="${m}">${m+1}</option>`;
-    });
+
+  const months = [...new Set(
+    rawData.map(d => new Date(d.timestamp).toISOString().slice(0,7))
+  )];
+
+  months.forEach(m => {
+    const opt = document.createElement("option");
+    opt.value = m;
+    opt.textContent = m;
+    sel.appendChild(opt);
+  });
+
   sel.onchange = render;
 }
 
+/* ===============================
+   RENDER SEMUA
+================================ */
 function render(){
   const m = document.getElementById("bulan").value;
-  const data = m==="all" ? rawData : rawData.filter(x=>new Date(x.Tanggal).getMonth()==m);
+
+  const data = m === "all"
+    ? rawData
+    : rawData.filter(d =>
+        new Date(d.timestamp).toISOString().startsWith(m)
+      );
 
   document.getElementById("avgProduk").innerText = avg(data,"kepuasan_produk");
   document.getElementById("avgCS").innerText = avg(data,"layanan_cs");
   document.getElementById("avgWA").innerText = avg(data,"layanan_wa");
 
-  const tbody = document.getElementById("tbody");
-  tbody.innerHTML="";
-  data.forEach(x=>{
-    tbody.innerHTML += `
-    <tr>
-      <td>${x.nama}</td>
-      <td>${x.hp}</td>
-      <td>${x.alamat}</td>
-      <td>${x.kepuasan_produk}</td>
-      <td>${x.layanan_cs}</td>
-      <td>${x.layanan_wa}</td>
-      <td>${new Date(x.Tanggal).toLocaleDateString()}</td>
-    </tr>`;
-  });
-
-  drawChart(data);
+  renderTable(data);
+  renderChart(data);
 }
 
+/* ===============================
+   TABLE
+================================ */
+function renderTable(data){
+  const tbody = document.getElementById("tbody");
+  tbody.innerHTML = "";
+
+  data.forEach(d => {
+    tbody.innerHTML += `
+      <tr>
+        <td>${d.nama}</td>
+        <td>${d.hp}</td>
+        <td>${d.alamat}</td>
+        <td>${d.kepuasan_produk}</td>
+        <td>${d.layanan_cs}</td>
+        <td>${d.layanan_wa}</td>
+        <td>${new Date(d.timestamp).toLocaleDateString()}</td>
+      </tr>
+    `;
+  });
+}
+
+/* ===============================
+   AVERAGE
+================================ */
 function avg(data,key){
   if(!data.length) return "-";
-  return (data.reduce((a,b)=>a+Number(b[key]),0)/data.length).toFixed(1);
+  return (
+    data.reduce((a,b)=>a+Number(b[key]||0),0) / data.length
+  ).toFixed(1);
 }
 
-function drawChart(data){
+/* ===============================
+   CHART
+================================ */
+function renderChart(data){
   const ctx = document.getElementById("chart");
   if(chart) chart.destroy();
+
   chart = new Chart(ctx,{
     type:"bar",
     data:{
@@ -114,6 +217,11 @@ function drawChart(data){
         ],
         backgroundColor:["#ff5ca8","#ff8ac1","#ffc0dd"]
       }]
+    },
+    options:{
+      scales:{
+        y:{beginAtZero:true,max:5}
+      }
     }
   });
 }
