--- a/admin/survey.html
+++ b/admin/survey.html
@@ -2,20 +2,19 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard Survey | PaddyID</title>
+<title>Dashboard Survey Customer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body{
-  font-family:Arial;
+  font-family:Arial, sans-serif;
   background:#f6f7fb;
   margin:0;
   padding:30px
 }
-h1{margin-bottom:5px}
-select{padding:6px 10px}
+h1{margin-bottom:10px}
+select{padding:6px}
 
 .cards{
   display:grid;
@@ -26,35 +25,34 @@ select{padding:6px 10px}
 .card{
   background:#fff;
   padding:20px;
-  border-radius:14px;
-  box-shadow:0 2px 12px rgba(0,0,0,.08);
+  border-radius:12px;
+  box-shadow:0 2px 10px rgba(0,0,0,.08);
   text-align:center
+}
+
+.chart-box{
+  background:#fff;
+  padding:20px;
+  border-radius:12px;
+  box-shadow:0 2px 10px rgba(0,0,0,.08);
+  margin-bottom:20px
 }
 
 table{
   width:100%;
   border-collapse:collapse;
   background:#fff;
-  border-radius:14px;
+  border-radius:12px;
   overflow:hidden
 }
 th,td{
   padding:10px;
   border-bottom:1px solid #eee;
-  text-align:center;
-  font-size:14px
+  text-align:center
 }
 th{
   background:#ff5ca8;
   color:#fff
-}
-
-canvas{
-  background:#fff;
-  border-radius:14px;
-  padding:20px;
-  margin-bottom:30px;
-  box-shadow:0 2px 12px rgba(0,0,0,.08)
 }
 </style>
 </head>
@@ -62,27 +60,28 @@ canvas{
 <body>
 
 <h1>📊 Dashboard Survey Customer</h1>
-<p>Data realtime dari Google Sheet</p>
 
 Filter Bulan:
 <select id="bulan"></select>
 
 <div class="cards">
   <div class="card">
-    <p>Kepuasan Produk</p>
-    <h2 id="avgProduk">-</h2>
+    <h3>Kepuasan Produk</h3>
+    <b id="avgProduk">-</b>
   </div>
   <div class="card">
-    <p>Layanan CS</p>
-    <h2 id="avgCS">-</h2>
+    <h3>Layanan CS</h3>
+    <b id="avgCS">-</b>
   </div>
   <div class="card">
-    <p>Layanan WA</p>
-    <h2 id="avgWA">-</h2>
+    <h3>Layanan WA</h3>
+    <b id="avgWA">-</b>
   </div>
 </div>
 
-<canvas id="chart" height="120"></canvas>
+<div class="chart-box">
+  <canvas id="chart" height="120"></canvas>
+</div>
 
 <table>
 <thead>
@@ -100,113 +99,70 @@ Filter Bulan:
 </table>
 
 <script>
-/* ===============================
-   CONFIG
-================================ */
 const API_URL =
-"https://script.google.com/macros/s/AKfycbwO6JUOxrskZJ3o9raQOjC9i6vHmSjXa0uve22RSSkSIYt4CTIy9PNPJ2A1wVHSG_a2vw/exec";
+"https://script.google.com/macros/s/AKfycbwO6JUOxrskZJ3o9raQOjC9i6vHmSjXa0uve22RSSkSIYt4CTIy9PNPJ2A1wVHSG_a2vw/exec?token=UBED_ADMIN_2026";
 
 let rawData = [];
 let chart;
 
-/* ===============================
-   FETCH DATA (FIXED)
-================================ */
 fetch(API_URL)
-  .then(r => r.json())
-  .then(res => {
-    console.log("RESPONSE GAS:", res);
+.then(r => r.json())
+.then(d => {
+  rawData = Array.isArray(d) ? d : [];
+  initFilter();
+  render();
+});
 
-    // 🔥 INI KUNCINYA
-    rawData = Array.isArray(res) ? res : (res.data || []);
-
-    initFilter();
-    render();
-  })
-  .catch(err => {
-    alert("Gagal load data");
-    console.error(err);
-  });
-
-/* ===============================
-   FILTER BULAN
-================================ */
 function initFilter(){
   const sel = document.getElementById("bulan");
   sel.innerHTML = `<option value="all">Semua</option>`;
 
-  const months = [...new Set(
-    rawData.map(d =>
-      new Date(d.timestamp).toISOString().slice(0,7)
-    )
-  )];
-
-  months.forEach(m => {
-    const opt = document.createElement("option");
-    opt.value = m;
-    opt.textContent = m;
-    sel.appendChild(opt);
+  [...new Set(rawData.map(x=>{
+    const t = new Date(x.timestamp);
+    return t.getMonth();
+  }))].forEach(m=>{
+    sel.innerHTML += `<option value="${m}">Bulan ${m+1}</option>`;
   });
 
   sel.onchange = render;
 }
 
-/* ===============================
-   RENDER
-================================ */
 function render(){
   const m = document.getElementById("bulan").value;
-
-  const data = m === "all"
+  const data = m==="all"
     ? rawData
-    : rawData.filter(d =>
-        new Date(d.timestamp).toISOString().startsWith(m)
-      );
+    : rawData.filter(x=>new Date(x.timestamp).getMonth()==m);
 
   document.getElementById("avgProduk").innerText = avg(data,"kepuasan_produk");
   document.getElementById("avgCS").innerText = avg(data,"layanan_cs");
   document.getElementById("avgWA").innerText = avg(data,"layanan_wa");
 
-  renderTable(data);
-  renderChart(data);
-}
-
-/* ===============================
-   TABLE
-================================ */
-function renderTable(data){
   const tbody = document.getElementById("tbody");
-  tbody.innerHTML = "";
-
-  data.forEach(d => {
+  tbody.innerHTML="";
+  data.forEach(x=>{
     tbody.innerHTML += `
-      <tr>
-        <td>${d.nama}</td>
-        <td>${d.hp}</td>
-        <td>${d.alamat}</td>
-        <td>${d.kepuasan_produk}</td>
-        <td>${d.layanan_cs}</td>
-        <td>${d.layanan_wa}</td>
-        <td>${new Date(d.timestamp).toLocaleDateString()}</td>
-      </tr>
-    `;
+    <tr>
+      <td>${x.nama}</td>
+      <td>${x.hp}</td>
+      <td>${x.alamat}</td>
+      <td>${x.kepuasan_produk}</td>
+      <td>${x.layanan_cs}</td>
+      <td>${x.layanan_wa}</td>
+      <td>${new Date(x.timestamp).toLocaleDateString()}</td>
+    </tr>`;
   });
+
+  drawChart(data);
 }
 
-/* ===============================
-   AVERAGE
-================================ */
 function avg(data,key){
   if(!data.length) return "-";
   return (
-    data.reduce((a,b)=>a+Number(b[key]||0),0) / data.length
+    data.reduce((a,b)=>a+Number(b[key]),0) / data.length
   ).toFixed(1);
 }
 
-/* ===============================
-   CHART
-================================ */
-function renderChart(data){
+function drawChart(data){
   const ctx = document.getElementById("chart");
   if(chart) chart.destroy();
 
@@ -215,33 +171,26 @@ function renderChart(data){
     data:{
       labels:["Produk","CS","WA"],
       datasets:[{
-        label: "Rata-rata Penilaian",
         data:[
           avg(data,"kepuasan_produk"),
           avg(data,"layanan_cs"),
           avg(data,"layanan_wa")
         ],
         backgroundColor:["#ff5ca8","#ff8ac1","#ffc0dd"],
-
-        // 🔥 INI YANG NGEGENDUTIN BAR (SEKARANG DIPERKECIL)
-        barThickness: 40,
-        maxBarThickness: 50,
+        barThickness: 22,        // 🔥 TIPIS
+        maxBarThickness: 28,
         borderRadius: 8
       }]
     },
     options:{
-      responsive: true,
+      responsive:true,
       plugins:{
-        legend:{ display:false }
+        legend:{display:false}
       },
       scales:{
         y:{
           beginAtZero:true,
-          max:5,
-          ticks:{ stepSize:1 }
-        },
-        x:{
-          grid:{ display:false }
+          max:5
         }
       }
     }
